# coffee-market-analysis

./: .gitignore  01_prepare_data.ipynb  02_analysis.ipynb  README.md  analysis_queries.sql  pyproject.toml
dashboard/: coffee_market_dashboard.pbix
notebooks/: 01_preprocessing.ipynb  02_analysis.ipynb
sql/: analysis_queries.sql
src/coffee_market/: __init__.py  analysis.py  cli.py  database.py  preprocessing.py  visualization.py
